--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REFRESH_TOKEN_SECRET = ''
-ACCESS_TOKEN_SECRET = ''
+REFRESH_TOKEN_SECRET = 'f9EEsc,uD%T[(f-T7F-ga6,;*Pc%}wVh'
+ACCESS_TOKEN_SECRET = 'qcy](sxR_YXTY7Kv!kFxWnWh<u`2tc/P'
 
-MONGO_URI = ""
+MONGO_URI = "mongodb+srv://adsun701:password12345@cluster0.c5hqm.mongodb.net/TodoTracker?retryWrites=true&w=majority"
 FRONTEND_PORT = 8080
 BACKEND_PORT = 4000
 CLIENT_LOCAL_ORIGIN = 'http://localhost:8080'
